crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__hard_soft_cast.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Option exposing (type option(..))\ntype foo = Bar | Bax\ntoData : foo -> Data\ntoData value =\n    case value of\n        Bar -> Builtin.constrData 0 []\n        Bax -> Builtin.constrData 1 []\ndecode : Data -> option foo\ndecode value =\n    case value of\n        Constr pair(0, []) -> Some Bar\n        Constr pair(1, []) -> Some Bax\n        _ -> None\nhardCast value =\n    case decode value of\n        Some result -> result\n        None -> fail\nsame a b =\n    case (a, b) of\n        (Bar, Bar) -> True\n        (Bax, Bax) -> True\n        _ -> False\nmain : bool\nmain =\n    let\n        x = toData Bar\n    in\n    case decode x of\n        Some _ -> True\n        None ->\n            let\n                y = hardCast x\n            in\n            same y y\n"
---
--- unoptimized Core
let fromInt#12 : int -> int = \value#57 : int -> value#57 in
let eq#13 : int -> int -> bool = equalsInteger in
let decode#3 : Data -> nash/base:Option.option Main.foo = \value#11 : Data -> let match#18 : Data = value#11 in
let leaf#30 : @delay (nash/base:Option.option Main.foo) = delay (constr 1) in
case@Data match#18 of
  DataConstr field#31 -> case@Pair field#31 of
    Pair field#32 field#33 -> case@Bool (\literal#14 : int -> eq#13 literal#14 (fromInt#12 0)) field#32 of
      True -> case@List field#33 of
        Nil -> (\field#15 : Main.foo -> constr 0 field#15) (constr 0)
        Cons field#34 field#35 -> force leaf#30
      False -> case@Bool (\literal#16 : int -> eq#13 literal#16 (fromInt#12 1)) field#32 of
        True -> case@List field#33 of
          Nil -> (\field#17 : Main.foo -> constr 0 field#17) (constr 1)
          Cons field#36 field#37 -> force leaf#30
        False -> force leaf#30
  DataMap field#38 -> force leaf#30
  DataList field#39 -> force leaf#30
  DataI field#40 -> force leaf#30
  DataB field#41 -> force leaf#30 in
let fromBool#4 : bool -> bool = \value#42 : bool -> value#42 in
let same#6 : Main.foo -> Main.foo -> 'erased = \a#43 : Main.foo b#44 : Main.foo -> let match#45 : (Main.foo, Main.foo) = constr 0 a#43 b#44 in
let leaf#48 : @delay 'erased = delay (fromBool#4 false) in
case@Tag match#45 of
  0 field#49 field#50 -> case@Tag field#49 of
    0 -> case@Tag field#50 of
      0 -> fromBool#4 true
      1 -> force leaf#48
    1 -> case@Tag field#50 of
      0 -> force leaf#48
      1 -> fromBool#4 true in
let hardCast#7 : Data -> Main.foo = \value#51 : Data -> let match#53 : nash/base:Option.option Main.foo = decode#3 value#51 in
case@Tag match#53 of
  0 field#54 -> let result#52 : Main.foo = field#54 in
  result#52
  1 -> error in
let toData#10 : Main.foo -> Data = \value#55 : Main.foo -> let match#56 : Main.foo = value#55 in
case@Tag match#56 of
  0 -> constrData (fromInt#12 0) (con (list data) [])
  1 -> constrData (fromInt#12 1) (con (list data) []) in
let x#2 : Data = toData#10 (constr 0) in
let match#8 : nash/base:Option.option Main.foo = decode#3 x#2 in
let main#1 : bool = case@Tag match#8 of
  0 field#9 -> fromBool#4 true
  1 -> let y#5 : Main.foo = hardCast#7 x#2 in
  same#6 y#5 y#5 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_12
    [(lam eq_13
      [(lam decode_3
        [(lam fromBool_4
          [(lam same_6
            [(lam hardCast_7
              [(lam toData_10
                [(lam x_2
                  [(lam match_8
                    [(lam main_1 main_1)
                      (case
                        match_8
                        (lam field_9 [fromBool_4 (con bool True)])
                        [(lam y_5 [[same_6 y_5] y_5]) [hardCast_7 x_2]])])
                    [decode_3 x_2]])
                  [toData_10 (constr 0)]])
                (lam value_55
                  [(lam match_56
                    (case
                      match_56
                      [[(builtin constrData) [fromInt_12 (con integer 0)]] (con (list data) [])]
                      [[(builtin constrData) [fromInt_12 (con integer 1)]] (con (list data) [])]))
                    value_55])])
              (lam value_51
                [(lam match_53
                  (case match_53 (lam field_54 [(lam result_52 result_52) field_54]) (error)))
                  [decode_3 value_51]])])
            (lam a_43
              (lam b_44
                [(lam match_45
                  [(lam leaf_48
                    (case
                      match_45
                      (lam field_49
                        (lam field_50
                          (case
                            field_49
                            (case field_50 [fromBool_4 (con bool True)] (force leaf_48))
                            (case field_50 (force leaf_48) [fromBool_4 (con bool True)]))))))
                    (delay [fromBool_4 (con bool False)])])
                  (constr 0 a_43 b_44)]))])
          (lam value_42 value_42)])
        (lam value_11
          [(lam match_18
            [(lam leaf_30
              [(lam generated_58
                (force
                  [[[[[[(force (builtin chooseData)) generated_58]
                    (delay
                      [(lam field_31
                        (case
                          field_31
                          (lam field_32
                            (lam field_33
                              (case
                                [(lam literal_14 [[eq_13 literal_14] [fromInt_12 (con integer 0)]]) field_32]
                                (case
                                  [(lam literal_16 [[eq_13 literal_16] [fromInt_12 (con integer 1)]]) field_32]
                                  (force leaf_30)
                                  (case
                                    field_33
                                    (lam field_36 (lam field_37 (force leaf_30)))
                                    [(lam field_17 (constr 0 field_17)) (constr 1)]))
                                (case
                                  field_33
                                  (lam field_34 (lam field_35 (force leaf_30)))
                                  [(lam field_15 (constr 0 field_15)) (constr 0)]))))))
                        [(builtin unConstrData) generated_58]])]
                    (delay (force leaf_30))]
                    (delay (force leaf_30))]
                    (delay (force leaf_30))]
                    (delay (force leaf_30))]))
                match_18])
              (delay (constr 1))])
            value_11])])
      (builtin equalsInteger)])
    (lam value_57 value_57)])
--- optimized Core
let eq#21 : int -> int -> bool = equalsInteger in
let decode#66 : Data -> nash/base:Option.option Main.foo = \value#22 : Data -> let leaf#24 : @delay (nash/base:Option.option Main.foo) = delay (constr 1) in
case@Data value#22 of
  DataConstr field#25 -> case@Pair field#25 of
    Pair field#26 field#27 -> let anf#89 : int -> bool = eq#21 field#26 in
    let anf#91 : bool = anf#89 0 in
    case@Bool anf#91 of
      True -> case@List field#27 of
        Nil -> let anf#92 : Main.foo = constr 0 in
        constr 0 anf#92
        Cons field#46 field#47 -> force leaf#24
      False -> let anf#93 : int -> bool = eq#21 field#26 in
      let anf#95 : bool = anf#93 1 in
      case@Bool anf#95 of
        True -> case@List field#27 of
          Nil -> let anf#96 : Main.foo = constr 1 in
          constr 0 anf#96
          Cons field#60 field#61 -> force leaf#24
        False -> force leaf#24
  DataMap field#62 -> force leaf#24
  DataList field#63 -> force leaf#24
  DataI field#64 -> force leaf#24
  DataB field#65 -> force leaf#24 in
let x#84 : Data = (con data (Constr 0 [])) in
let match#85 : nash/base:Option.option Main.foo = decode#66 x#84 in
case@Tag match#85 of
  0 field#86 -> true
  1 -> let match#77 : nash/base:Option.option Main.foo = decode#66 x#84 in
  let y#87 : Main.foo = case@Tag match#77 of
    0 field#78 -> field#78
    1 -> error in
  let leaf#72 : @delay 'erased = delay false in
  case@Tag y#87 of
    0 -> case@Tag y#87 of
      0 -> true
      1 -> force leaf#72
    1 -> case@Tag y#87 of
      0 -> force leaf#72
      1 -> true
--- optimized UPLC
(program 1.1.0
  [(lam builtin_36
    [(lam eq_1
      [(lam decode_23
        [(lam x_28
          [(lam match_29
            (case
              match_29
              (lam field_30 (con bool True))
              [(lam match_31
                [(lam y_33
                  [(lam leaf_34
                    (case
                      y_33
                      (case y_33 (con bool True) (force leaf_34))
                      (case y_33 (force leaf_34) (con bool True))))
                    (delay (con bool False))])
                  (case match_31 (lam field_32 field_32) (error))])
                [decode_23 x_28]]))
            [decode_23 x_28]])
          (con data (Constr 0 []))])
        (lam value_2
          [(lam leaf_3
            [(lam generated_35
              (force
                [[[[[[builtin_36 generated_35]
                  (delay
                    [(lam field_4
                      (case
                        field_4
                        (lam field_5
                          (lam field_6
                            [(lam anf_7
                              [(lam anf_8
                                (case
                                  anf_8
                                  [(lam anf_12
                                    [(lam anf_13
                                      (case
                                        anf_13
                                        (force leaf_3)
                                        (case
                                          field_6
                                          (lam field_15 (lam field_16 (force leaf_3)))
                                          [(lam anf_14 (constr 0 anf_14)) (constr 1)])))
                                      [anf_12 (con integer 1)]])
                                    [eq_1 field_5]]
                                  (case
                                    field_6
                                    (lam field_10 (lam field_11 (force leaf_3)))
                                    [(lam anf_9 (constr 0 anf_9)) (constr 0)])))
                                [anf_7 (con integer 0)]])
                              [eq_1 field_5]]))))
                      [(builtin unConstrData) generated_35]])]
                  (delay (force leaf_3))]
                  (delay (force leaf_3))]
                  (delay (force leaf_3))]
                  (delay (force leaf_3))]))
              value_2])
            (delay (constr 1))])])
      (builtin equalsInteger)])
    (force (builtin chooseData))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1889547, memory: 10797
