crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__mk_cons_direct_invoke_1.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nexpected : list int\nexpected = [1]\nmain : bool\nmain = eq (Builtin.mkCons 1 []) expected\n"
---
--- unoptimized Core
let fromBool#7 : bool -> bool = \value#23 : bool -> value#23 in
let eq#15 : int -> int -> bool = equalsInteger in
letrec
  eq#2 : list 'erased -> list 'erased -> bool [static []] = \xs#5 : list 'erased ys#6 : list 'erased -> let match#19 : list 'erased = xs#5 in
  case@List match#19 of
    Nil -> let match#8 : list 'erased = ys#6 in
    case@List match#8 of
      Nil -> fromBool#7 true
      Cons field#9 field#10 -> fromBool#7 false
    Cons field#20 field#21 -> let x#11 : 'erased = field#20 in
    let restX#12 : list 'erased = field#21 in
    let match#16 : list 'erased = ys#6 in
    case@List match#16 of
      Nil -> fromBool#7 false
      Cons field#17 field#18 -> let y#13 : 'erased = field#17 in
      let restY#14 : list 'erased = field#18 in
      case@Bool eq#15 x#11 y#13 of
        True -> eq#2 restX#12 restY#14
        False -> false
in
let fromInt#3 : int -> int = \value#22 : int -> value#22 in
let expected#4 : list int = mkCons (fromInt#3 1) (con (list integer) []) in
let main#1 : bool = eq#2 (mkCons (fromInt#3 1) (con (list integer) [])) expected#4 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_7
    [(lam eq_15
      [(lam eq_2
        [(lam fromInt_3
          [(lam expected_4
            [(lam main_1 main_1)
              [[eq_2
                [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]] (con (list integer) [])]]
                expected_4]])
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]] (con (list integer) [])]])
          (lam value_22 value_22)])
        [(lam self_24 [self_24 self_24])
          (lam self_24
            (lam xs_5
              (lam ys_6
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam x_11
                          [(lam restX_12
                            [(lam match_16
                              (case
                                match_16
                                (lam field_17
                                  (lam field_18
                                    [(lam y_13
                                      [(lam restY_14
                                        (case
                                          [[eq_15 x_11] y_13]
                                          (con bool False)
                                          [[[self_24 self_24] restX_12] restY_14]))
                                        field_18])
                                      field_17]))
                                [fromBool_7 (con bool False)]))
                              ys_6])
                            field_21])
                          field_20]))
                    [(lam match_8
                      (case
                        match_8
                        (lam field_9 (lam field_10 [fromBool_7 (con bool False)]))
                        [fromBool_7 (con bool True)]))
                      ys_6]))
                  xs_5])))]])
      (builtin equalsInteger)])
    (lam value_23 value_23)])
--- optimized Core
letrec
  eq#27 : list 'erased -> list 'erased -> bool [static []] = \xs#28 : list 'erased ys#29 : list 'erased -> case@List xs#28 of
    Nil -> case@List ys#29 of
      Nil -> true
      Cons field#32 field#33 -> false
    Cons field#34 field#35 -> case@List ys#29 of
      Nil -> false
      Cons field#39 field#40 -> let anf#47 : bool = equalsInteger field#34 field#39 in
      case@Bool anf#47 of
        True -> eq#27 field#35 field#40
        False -> false
in
eq#27 (con (list integer) [1]) (con (list integer) [1])
--- optimized UPLC
(program 1.1.0
  [(lam eq_15 [[eq_15 (con (list integer) [1])] (con (list integer) [1])])
    [(lam self_4 [self_4 self_4])
      (lam self_5
        (lam xs_6
          (lam ys_7
            (case
              xs_6
              (lam field_10
                (lam field_11
                  (case
                    ys_7
                    (lam field_12
                      (lam field_13
                        [(lam anf_14
                          (case anf_14 (con bool False) (case (constr 0 self_5 field_11 field_13) self_5)))
                          [[(builtin equalsInteger) field_10] field_12]]))
                    (con bool False))))
              (case ys_7 (lam field_8 (lam field_9 (con bool False))) (con bool True))))))]])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1813157, memory: 10265
