crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__mk_cons_direct_invoke_2.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (ToData)\ntype Option = Some Int | None\nmain : bool\nmain = equalsData\n    (toData (Builtin.listData (Builtin.mkCons (Some 42) [None])))\n    (toData (Builtin.listData [Some 42, None]))\n"
---
--- unoptimized Core
let toData#2 : 'erased -> Data = \coerce#6 : 'erased -> coerce#6 in
let fromInt#4 : int -> Int = iData in
let main#1 : bool = equalsData (toData#2 (listData (mkCons ((\field#3 : Int -> constrData 0 (mkCons field#3 (con (list data) []))) (fromInt#4 42)) (mkCons (constrData 1 (con (list data) [])) (con (list data) []))))) (toData#2 (listData (mkCons ((\field#5 : Int -> constrData 0 (mkCons field#5 (con (list data) []))) (fromInt#4 42)) (mkCons (constrData 1 (con (list data) [])) (con (list data) []))))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam toData_2
    [(lam fromInt_4
      [(lam main_1 main_1)
        [[(builtin equalsData)
          [toData_2
            [(builtin listData)
              [[(force (builtin mkCons))
                [(lam field_3
                  [[(builtin constrData) (con integer 0)]
                    [[(force (builtin mkCons)) field_3] (con (list data) [])]])
                  [fromInt_4 (con integer 42)]]]
                [[(force (builtin mkCons))
                  [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                  (con (list data) [])]]]]]
          [toData_2
            [(builtin listData)
              [[(force (builtin mkCons))
                [(lam field_5
                  [[(builtin constrData) (con integer 0)]
                    [[(force (builtin mkCons)) field_5] (con (list data) [])]])
                  [fromInt_4 (con integer 42)]]]
                [[(force (builtin mkCons))
                  [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                  (con (list data) [])]]]]]])
      (builtin iData)])
    (lam coerce_6 coerce_6)])
--- optimized Core
let fromInt#9 : int -> Int = iData in
let anf#14 : Int = fromInt#9 42 in
let anf#13 : list Data = mkCons anf#14 (con (list data) []) in
let anf#15 : Main.Option = constrData 0 anf#13 in
let anf#18 : list Main.Option = mkCons anf#15 (con (list data) [(Constr 1 [])]) in
let anf#19 : List Main.Option = listData anf#18 in
let anf#22 : Int = fromInt#9 42 in
let anf#21 : list Data = mkCons anf#22 (con (list data) []) in
let anf#23 : Main.Option = constrData 0 anf#21 in
let anf#26 : list Main.Option = mkCons anf#23 (con (list data) [(Constr 1 [])]) in
let anf#27 : List Main.Option = listData anf#26 in
equalsData anf#19 anf#27
--- optimized UPLC
(program 1.1.0
  [(lam builtin_13
    [(lam partial_14
      [(lam fromInt_1
        [(lam anf_2
          [(lam anf_3
            [(lam anf_4
              [(lam anf_5
                [(lam anf_6
                  [(lam anf_7
                    [(lam anf_8
                      [(lam anf_10
                        [(lam anf_11
                          [(lam anf_12 [[(builtin equalsData) anf_6] anf_12]) [(builtin listData) anf_11]])
                          [[builtin_13 anf_10] (con (list data) [(Constr 1 [])])]])
                        [partial_14 anf_8]])
                      [[builtin_13 anf_7] (con (list data) [])]])
                    [fromInt_1 (con integer 42)]])
                  [(builtin listData) anf_5]])
                [[builtin_13 anf_4] (con (list data) [(Constr 1 [])])]])
              [partial_14 anf_3]])
            [[builtin_13 anf_2] (con (list data) [])]])
          [fromInt_1 (con integer 42)]])
        (builtin iData)])
      [(builtin constrData) (con integer 0)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 3263069, memory: 8549
